# data-pipelines

./: .env.example  .gitignore  README.md  create-wrappers.mjs  import-fr-excel.ts  import-vs-excel.ts  package-lock.json  package.json  requirements.txt
.github/workflows/: acheter_louer.yml  amtsblatt.yml  bfs_population.yml  bfs_rents.yml  bfs_vacancy.yml  blog_generate.yml  candle_updater.yml  court_decisions.yml  dld-properties.yml  dld-transactions.yml  (+53 more)
migrations/: replace_promote_lolla_batch.sql
pdcom-parser/: .gitignore  README.md  pyproject.toml
pdcom-parser/.github/workflows/: pdcom-parse.yml
pdcom-parser/configs/: label_blocklists.yaml  label_slugs.yaml  map_page_hints.yaml  map_page_hints_auto.yaml  theme_keywords.yaml
pdcom-parser/scripts/: bootstrap_fixtures.py  run_corpus.py
pdcom-parser/sql/: 001_bronze_schema.sql  002_silver_and_gold.sql  003_lamap_db_ref_table.sql  004_lamap_db_public_function.sql  005_silver_gold_v02.sql  006_lamap_db_v02.sql  007_silver_v04_label_quality.sql
pdcom-parser/src/pdcom_parser/: classify.py  cli.py  db.py  discover.py  download.py  export.py  extract.py  georef.py  hatch.py  hints.py  ingest.py  label_quality.py  legend.py  normalize.py  pipeline.py  qa.py  report.py
pdcom-parser/tests/: conftest.py  test_classify.py  test_extract.py  test_georef.py  test_legend.py
pdcom-parser/tools/: .gitignore  classify_map_pages.py
re-llm-classification/: .env.example  EMERGENCY_DISABLE.sql  README.md  classify_existing.py  requirements.txt
shared/: freshness.py  sitg_arcgis.py  sitg_csv.py  supabase_client.py
(+212 files in other folders)
